--- a/MRQuiz-AVstats.html
+++ b/MRQuiz-AVstats.html
@@ -12,12 +12,12 @@ Licença de uso: Atribuição-NãoComercial-CompartilhaIgual (CC BY-NC-SA).
 Útima atualização: 21-03-2025.
 -->
 
-<script src="MathematicalRamblings.js"></script>
-<script src="jquery-3.7.1.js"></script>
-<script src="md5.js"></script>
-<script src="moment.js"></script>
+<script src="https://antoniovandre2.github.io/MathematicalRamblingsjs2/MathematicalRamblings.js"></script>
+<script src="https://antoniovandre2.github.io/MathematicalRamblingsjs2/jquery-3.7.1.js"></script>
+<script src="https://antoniovandre2.github.io/MathematicalRamblingsjs2/md5.js"></script>
+<script src="https://antoniovandre2.github.io/MathematicalRamblingsjs2/moment.js"></script>
 
-<link href='Orbitron.css' rel='stylesheet' type='text/css'>
+<link href='https://antoniovandre2.github.io/MathematicalRamblingsjs2/Orbitron.css' rel='stylesheet' type='text/css'>
 
 <style>
 
