--- a/MRQuiz-AVstats.html
+++ b/MRQuiz-AVstats.html
@@ -23,7 +23,7 @@ Licença de uso: Atribuição-NãoComercial-CompartilhaIgual (CC BY-NC-SA).
 
 html {
   font-family: "Courier New";
-  background: url(Mathematical%20Ramblings%20logo%20-%20White.png) repeat center center fixed; 
+  background: url(https://antoniovandre2.github.io/MathematicalRamblingsjs2/Mathematical%20Ramblings%20logo%20-%20White.png) repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
