--- a/MRQuiz-AVstats.html
+++ b/MRQuiz-AVstats.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<head><meta charset="utf-8"/></head>
+<head><meta charset="utf-8"/><link rel="icon" type="image/x-icon" href="https://antoniovandre2.github.io/MathematicalRamblingsjs2/favicon.ico"></head>
 
 <!--
 
@@ -488,7 +488,7 @@ function processargraficohorarioquizhistorico()
   {
   flagquizgraficohorarioquizhistorico = 1;
 
-  $('#quizloadinghorariogif').html("<img src=\"MR%20loading.gif\" width=\"50px\">");
+  $('#quizloadinghorariogif').html("<img src=\"https://antoniovandre2.github.io/MathematicalRamblingsjs2/MR%20loading.gif\" width=\"50px\">");
 
   var quizhorasuso = [];
 
