--- a/MRQuiz-AVstats.html
+++ b/MRQuiz-AVstats.html
@@ -17,7 +17,7 @@ Licença de uso: Atribuição-NãoComercial-CompartilhaIgual (CC BY-NC-SA).
 <script src="https://antoniovandre2.github.io/MathematicalRamblingsjs2/md5.js"></script>
 <script src="https://antoniovandre2.github.io/MathematicalRamblingsjs2/moment.js"></script>
 
-<link href='https://antoniovandre2.github.io/MathematicalRamblingsjs2/Orbitron.css' rel='stylesheet' type='text/css'>
+<link href='Orbitron.css' rel='stylesheet' type='text/css'>
 
 <style>
 
