--- a/MRQuiz-AVstats.html
+++ b/MRQuiz-AVstats.html
@@ -17,8 +17,6 @@ Licença de uso: Atribuição-NãoComercial-CompartilhaIgual (CC BY-NC-SA).
 <script src="https://antoniovandre2.github.io/MathematicalRamblingsjs2/md5.js"></script>
 <script src="https://antoniovandre2.github.io/MathematicalRamblingsjs2/moment.js"></script>
 
-<link href='Orbitron.css' rel='stylesheet' type='text/css'>
-
 <style>
 
 html {
@@ -685,7 +683,7 @@ function processargraficodiarioquizhistorico()
   {
   flagquizgraficodiarioquizhistorico = 1;
 
-  $('#quizloadingdiariogif').html("<img src=\"MR%20loading.gif\" width=\"50px\">");
+  $('#quizloadingdiariogif').html("<img src=\"https://antoniovandre2.github.io/MathematicalRamblingsjs2/MR%20loading.gif\" width=\"50px\">");
 
   var quizdiasuso = [];
 
@@ -787,7 +785,7 @@ function processargraficomensalquizhistorico()
   {
   flagquizgraficomensalquizhistorico = 1;
 
-  $('#quizloadingmensalgif').html("<img src=\"MR%20loading.gif\" width=\"50px\">");
+  $('#quizloadingmensalgif').html("<img src=\"https://antoniovandre2.github.io/MathematicalRamblingsjs2/MR%20loading.gif\" width=\"50px\">");
 
   var quizmesesuso = [];
 
